Save the status of the 'keep previous wineyard checkbox' Cleaning